--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "react-refresh": "^0.14.0",
+    "styled-components": "^6.1.8",
     "typescript": "^5.3.3",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
